--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <main class=" introducao">
     <img src="./07-projeto-portfolio/07-projeto-portfolio/0705-introducao/portfolio/img/perfil.jpg" alt="lobo cinza" width="360" height="520">
     <div>
-      <h1>Desenvolvedor<br> Front End & <br>UX/UI Desinger.</h1>
+      <h1>Desenvolvedor<br> Front End & <br>UX/UI Desinger</h1>
       <p> localizado no Pará</p>
     </div>
   </main>
